@startuml
class User {
    - String username
    - String email
    - Boolean activate1
}

class Role {
    - String description
}
class UserData {
    -String firstName 
    - String lastName 
    - String address 
    - String phoneNumer 
    
}

User "1" --* "1" UserData
User "n"-- "m" Role
@enduml
